[package]
name = "user_chat"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.4"
actix-files = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1", features = ["v4"] }     
futures-util = "0.3"
env_logger = "0.10"
log = "0.4"
actix-web-actors = "4.4"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "macros"] }
argon2 = "0.3"
rand = "0.8"
